Alles implementiert! Nur der Uugriff und die Verarbeitung der Daten, welche ein echter Server liefert, müssen angepasst werden!

--- a/WebContent/css/ProjectControllingSystem.css
+++ b/WebContent/css/ProjectControllingSystem.css
@@ -67,3 +67,15 @@ html,body {
 .dijitSelect {
 	width: 50%;
 }
+
+.dijitIconKeyLogin {
+	background-image: url("WebContent/img/key_login.png");
+}
+
+.dijitIconOptions {
+	background-image: url("WebContent/img/options.png");
+}
+
+.dijitIconChart {
+	background-image: url("WebContent/img/pie-chart_graph.png");
+}
