--- a/war/css/ProjectControllingSystem.css
+++ b/war/css/ProjectControllingSystem.css
@@ -48,6 +48,19 @@ html,body {
 	border-bottom: none;
 }
 
+.topPane {
+	background: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+		linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+		linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+		linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+		linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+		linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%,
+		transparent 75%, #242424 75%, #242424) !important;
+	background-color: #131313 !important;
+	background-size: 20px 20px !important;
+	z-index: 10000 !important;
+}
+
 .nihilo .dijitToolbar {
 	/* IE10 Consumer Preview */
 	background-image: -ms-linear-gradient(bottom, #171717 0%, #B50B38 100%)
@@ -110,19 +123,18 @@ html,body {
 
 .menuRight {
 	float: right;
-	margin-right: 5px;
-	height: 100% !important;
+	height: 80% !important;
+	margin-right: 7px;
 }
 
 .menuLeft {
 	float: left;
-	margin-left: 5px;
-	height: 100% !important;
+	height: 80% !important;
+	margin-left: 7px;
 }
 
 .menuButton {
-	height: 60% !important;
-	margin-top: 7% !important;
+	height: 110% !important;
 }
 
 span#tb_menubar_NewChart_label.dijitReset.dijitInline.dijitButtonText,span#tb_menubar_settings_label.dijitReset.dijitInline.dijitButtonText,span#tb_menubar_logout_label.dijitReset.dijitInline.dijitButtonText
@@ -168,12 +180,420 @@ span#tb_menubar_NewChart_label.dijitReset.dijitInline.dijitButtonText,span#tb_me
 
 .dijitIconKeyLogin {
 	background-image: url("../img/key_login.png");
+	width: 32px;
+	height: 28px;
 }
 
 .dijitIconOptions {
 	background-image: url("../img/options.png");
+	width: 32px;
+	height: 28px;
 }
 
 .dijitIconChart {
 	background-image: url("../img/pie-chart_graph.png");
+	background-position: 0px !important;
+	width: 32px;
+	height: 28px;
 }
+
+.splashScreen {
+	height: 100%;
+	width: 100%;
+	background: radial-gradient(black 15%, transparent 16%) 0 0,
+		radial-gradient(black 15%, transparent 16%) 8px 8px,
+		radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 0 1px,
+		radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 8px 9px;
+	background-color: #282828;
+	background-size: 16px 16px;
+	position: relative;
+}
+
+.innerContainer {
+	position: absolute;
+	top: 40%;
+	height: 10em;
+	margin-top: -5em;
+	margin-left: 10%;
+}
+
+.loadingText {
+	margin-left: 39.5%;
+	font-family: Garamond, serif;
+	font-size: 25px;
+	color: red;
+	width: 30%;
+	height: 20%;
+	z-index: 2;
+	position: absolute;
+	margin-top: 3%;
+}
+
+.loadingOverlay {
+	text-align: center;
+	margin-top: 5%;
+}
+
+.mainContainer {
+}
+
+/* loading circles */
+.windows8 {
+		font-family: Garamond, serif;
+	font-size: 25px;
+	color: red;
+	width: 30%;
+	height: 20%;
+position: relative;
+width: 125px;
+height:125px;
+margin-left : 50%;
+}
+
+.windows8 .wBall {
+position: absolute;
+width: 119px;
+height: 119px;
+opacity: 0;
+-moz-transform: rotate(225deg);
+-moz-animation: orbit 6.050000000000001s infinite;
+-webkit-transform: rotate(225deg);
+-webkit-animation: orbit 6.050000000000001s infinite;
+-ms-transform: rotate(225deg);
+-ms-animation: orbit 6.050000000000001s infinite;
+-o-transform: rotate(225deg);
+-o-animation: orbit 6.050000000000001s infinite;
+transform: rotate(225deg);
+animation: orbit 6.050000000000001s infinite;
+}
+
+.windows8 .wBall .wInnerBall{
+position: absolute;
+width: 16px;
+height: 16px;
+background: #FF0000;
+left:0px;
+top:0px;
+-moz-border-radius: 16px;
+-webkit-border-radius: 16px;
+-ms-border-radius: 16px;
+-o-border-radius: 16px;
+border-radius: 16px;
+}
+
+.windows8 #wBall_1 {
+-moz-animation-delay: 1.32s;
+-webkit-animation-delay: 1.32s;
+-ms-animation-delay: 1.32s;
+-o-animation-delay: 1.32s;
+animation-delay: 1.32s;
+}
+
+.windows8 #wBall_2 {
+-moz-animation-delay: 0.26s;
+-webkit-animation-delay: 0.26s;
+-ms-animation-delay: 0.26s;
+-o-animation-delay: 0.26s;
+animation-delay: 0.26s;
+}
+
+.windows8 #wBall_3 {
+-moz-animation-delay: 0.53s;
+-webkit-animation-delay: 0.53s;
+-ms-animation-delay: 0.53s;
+-o-animation-delay: 0.53s;
+animation-delay: 0.53s;
+}
+
+.windows8 #wBall_4 {
+-moz-animation-delay: 0.79s;
+-webkit-animation-delay: 0.79s;
+-ms-animation-delay: 0.79s;
+-o-animation-delay: 0.79s;
+animation-delay: 0.79s;
+}
+
+.windows8 #wBall_5 {
+-moz-animation-delay: 1.06s;
+-webkit-animation-delay: 1.06s;
+-ms-animation-delay: 1.06s;
+-o-animation-delay: 1.06s;
+animation-delay: 1.06s;
+}
+
+@-moz-keyframes orbit {
+0% {
+opacity: 1;
+z-index:99;
+-moz-transform: rotate(180deg);
+-moz-animation-timing-function: ease-out;
+}
+
+7% {
+opacity: 1;
+-moz-transform: rotate(300deg);
+-moz-animation-timing-function: linear;
+-moz-origin:0%;
+}
+
+30% {
+opacity: 1;
+-moz-transform:rotate(410deg);
+-moz-animation-timing-function: ease-in-out;
+-moz-origin:7%;
+}
+
+39% {
+opacity: 1;
+-moz-transform: rotate(645deg);
+-moz-animation-timing-function: linear;
+-moz-origin:30%;
+}
+
+70% {
+opacity: 1;
+-moz-transform: rotate(770deg);
+-moz-animation-timing-function: ease-out;
+-moz-origin:39%;
+}
+
+75% {
+opacity: 1;
+-moz-transform: rotate(900deg);
+-moz-animation-timing-function: ease-out;
+-moz-origin:70%;
+}
+
+76% {
+opacity: 0;
+-moz-transform:rotate(900deg);
+}
+
+100% {
+opacity: 0;
+-moz-transform: rotate(900deg);
+}
+
+}
+
+@-webkit-keyframes orbit {
+0% {
+opacity: 1;
+z-index:99;
+-webkit-transform: rotate(180deg);
+-webkit-animation-timing-function: ease-out;
+}
+
+7% {
+opacity: 1;
+-webkit-transform: rotate(300deg);
+-webkit-animation-timing-function: linear;
+-webkit-origin:0%;
+}
+
+30% {
+opacity: 1;
+-webkit-transform:rotate(410deg);
+-webkit-animation-timing-function: ease-in-out;
+-webkit-origin:7%;
+}
+
+39% {
+opacity: 1;
+-webkit-transform: rotate(645deg);
+-webkit-animation-timing-function: linear;
+-webkit-origin:30%;
+}
+
+70% {
+opacity: 1;
+-webkit-transform: rotate(770deg);
+-webkit-animation-timing-function: ease-out;
+-webkit-origin:39%;
+}
+
+75% {
+opacity: 1;
+-webkit-transform: rotate(900deg);
+-webkit-animation-timing-function: ease-out;
+-webkit-origin:70%;
+}
+
+76% {
+opacity: 0;
+-webkit-transform:rotate(900deg);
+}
+
+100% {
+opacity: 0;
+-webkit-transform: rotate(900deg);
+}
+
+}
+
+@-ms-keyframes orbit {
+0% {
+opacity: 1;
+z-index:99;
+-ms-transform: rotate(180deg);
+-ms-animation-timing-function: ease-out;
+}
+
+7% {
+opacity: 1;
+-ms-transform: rotate(300deg);
+-ms-animation-timing-function: linear;
+-ms-origin:0%;
+}
+
+30% {
+opacity: 1;
+-ms-transform:rotate(410deg);
+-ms-animation-timing-function: ease-in-out;
+-ms-origin:7%;
+}
+
+39% {
+opacity: 1;
+-ms-transform: rotate(645deg);
+-ms-animation-timing-function: linear;
+-ms-origin:30%;
+}
+
+70% {
+opacity: 1;
+-ms-transform: rotate(770deg);
+-ms-animation-timing-function: ease-out;
+-ms-origin:39%;
+}
+
+75% {
+opacity: 1;
+-ms-transform: rotate(900deg);
+-ms-animation-timing-function: ease-out;
+-ms-origin:70%;
+}
+
+76% {
+opacity: 0;
+-ms-transform:rotate(900deg);
+}
+
+100% {
+opacity: 0;
+-ms-transform: rotate(900deg);
+}
+
+}
+
+@-o-keyframes orbit {
+0% {
+opacity: 1;
+z-index:99;
+-o-transform: rotate(180deg);
+-o-animation-timing-function: ease-out;
+}
+
+7% {
+opacity: 1;
+-o-transform: rotate(300deg);
+-o-animation-timing-function: linear;
+-o-origin:0%;
+}
+
+30% {
+opacity: 1;
+-o-transform:rotate(410deg);
+-o-animation-timing-function: ease-in-out;
+-o-origin:7%;
+}
+
+39% {
+opacity: 1;
+-o-transform: rotate(645deg);
+-o-animation-timing-function: linear;
+-o-origin:30%;
+}
+
+70% {
+opacity: 1;
+-o-transform: rotate(770deg);
+-o-animation-timing-function: ease-out;
+-o-origin:39%;
+}
+
+75% {
+opacity: 1;
+-o-transform: rotate(900deg);
+-o-animation-timing-function: ease-out;
+-o-origin:70%;
+}
+
+76% {
+opacity: 0;
+-o-transform:rotate(900deg);
+}
+
+100% {
+opacity: 0;
+-o-transform: rotate(900deg);
+}
+
+}
+
+@keyframes orbit {
+0% {
+opacity: 1;
+z-index:99;
+transform: rotate(180deg);
+animation-timing-function: ease-out;
+}
+
+7% {
+opacity: 1;
+transform: rotate(300deg);
+animation-timing-function: linear;
+origin:0%;
+}
+
+30% {
+opacity: 1;
+transform:rotate(410deg);
+animation-timing-function: ease-in-out;
+origin:7%;
+}
+
+39% {
+opacity: 1;
+transform: rotate(645deg);
+animation-timing-function: linear;
+origin:30%;
+}
+
+70% {
+opacity: 1;
+transform: rotate(770deg);
+animation-timing-function: ease-out;
+origin:39%;
+}
+
+75% {
+opacity: 1;
+transform: rotate(900deg);
+animation-timing-function: ease-out;
+origin:70%;
+}
+
+76% {
+opacity: 0;
+transform:rotate(900deg);
+}
+
+100% {
+opacity: 0;
+transform: rotate(900deg);
+}
+
+}
+/*- See more at: http://cssload.net/#sthash.QtZDvIK1.dpuf*/
+/* loading circles */
